--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1271,6 +1271,8 @@ body {
       flex-wrap: wrap;
 }
 .about_container .block_row .block_item {
+  width: 23%;
+  min-width: 150px;
   line-height: 25px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -1279,9 +1281,9 @@ body {
   -webkit-box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
           box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
-  max-width: 289px;
   min-height: 108px;
-  padding: 0 60px;
+  padding-left: 60px;
+  padding-right: 60px;
 }
 .about_container .block_row .block_item a {
   color: #000000;
@@ -2027,7 +2029,6 @@ body {
   -webkit-box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
           box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
-  width: 360px;
   height: 109px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -2038,6 +2039,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  width: 28%;
 }
 .administration_container .administration_paycheck .administration_paycheck_item .block_item {
   margin: 0 30px;
@@ -2065,7 +2067,7 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 15px;
+  gap: 10px;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -2081,28 +2083,28 @@ body {
   -webkit-box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
           box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
-  max-width: 365px;
-  min-height: 106px;
+  width: 32%;
+  height: 106px;
   display: block;
   padding-top: 28px;
 }
 .vacancies_container .vacancies_contact .vacancies_contact_item .vacancies_contact_item_top {
   color: #000000;
   font-family: "OpenSans";
-  font-size: 18px;
+  font-size: 17px;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
 }
 .vacancies_container .vacancies_contact .vacancies_contact_item .vacancies_contact_item_down {
   font-family: "OpenSans";
-  font-size: 18px;
+  font-size: 17px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
 }
 .vacancies_container .vacancies_contact .block1 {
-  padding: 28px 7px;
+  padding-left: 28px 15px;
 }
 .vacancies_container .vacancies_contact .block2 {
   padding: 28px 32px;
@@ -3011,16 +3013,60 @@ body {
     height: 80vw;
   }
 }
-@media (max-width: 796px) {
+@media (max-width: 906px) {
+  .block_row .block_item {
+    width: 30% !important;
+  }
+}
+@media (max-width: 767px) {
+  .about_title {
+    font-size: 40px;
+  }
+  .subtitle_top, .subtitle_bottom {
+    font-size: 25px;
+  }
+  .block_row .block_item {
+    font-size: 14px;
+  }
+}
+@media (max-width: 620px) {
+  .block_row .block_item {
+    width: 48% !important;
+  }
+}
+@media (max-width: 450px) {
+  .block_row .block_item {
+    width: 100% !important;
+  }
+}
+@media (max-width: 1034px) {
+  .block_item {
+    font-size: 14px;
+  }
   .administration_paycheck_item {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-flex: 1;
-        -ms-flex-positive: 1;
-            flex-grow: 1;
-    max-width: 700px;
-    margin-right: 30px;
+    width: 32% !important;
+  }
+  .administration_paycheck {
+    padding-left: 0 !important;
+  }
+}
+@media (max-width: 907px) {
+  .administration_paycheck_item {
+    width: 48% !important;
+  }
+}
+@media (max-width: 767px) {
+  .administration_title {
+    font-size: 40px;
+  }
+  .administration_text_subtitle {
+    font-size: 25px;
+  }
+  .administration_text {
+    font-size: 14px !important;
+  }
+  .administration_position_title, .administration_position_name {
+    font-size: 22px !important;
   }
 }
 @media (max-width: 560px) {
@@ -3033,6 +3079,9 @@ body {
         -ms-flex-direction: column;
             flex-direction: column;
   }
+  .administration_main_text {
+    margin-left: 15px;
+  }
 }
 @media (max-width: 500px) {
   .administration_position {
@@ -3043,6 +3092,60 @@ body {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+  }
+  .administration_position_content {
+    margin-left: 15px;
+  }
+  .administration_paycheck_item {
+    width: 99% !important;
+  }
+  .administration_title {
+    font-size: 35px;
+  }
+}
+@media (max-width: 1027px) {
+  .vacancies_contact_item_top, .vacancies_contact_item_down {
+    font-size: 14px !important;
+  }
+  .block1, .block2, .block3 {
+    -webkit-box-pack: center !important;
+        -ms-flex-pack: center !important;
+            justify-content: center !important;
+  }
+}
+@media (max-width: 767px) {
+  .vacancies_contact_item {
+    width: 49% !important;
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
+    display: flex !important;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .vacancies_title {
+    font-size: 40px;
+  }
+  .vacancies_block_title {
+    font-size: 20px !important;
+  }
+  .vacancies_block_text {
+    font-size: 14px !important;
+  }
+  .block1 {
+    padding: 28px 20px !important;
+  }
+  .vacancies_data {
+    display: none !important;
+  }
+}
+@media (max-width: 519px) {
+  .vacancies_contact_item {
+    width: 99% !important;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 .header_bottom_menu ul {
