--- a/static/css/_adaptive.scss
+++ b/static/css/_adaptive.scss
@@ -473,3 +473,14 @@
 
 
 }
+// ----------------Реквизиты---------
+@media(max-width: 767px) {
+    .requisites_title {
+        font-size: 40px;
+    } 
+    .requisites_item_title, .requisites_item_subtitle, .requisites_item_text {
+        font-size: 14px !important;
+    } 
+}
+
+
