--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3148,6 +3148,14 @@ body {
             align-items: center;
   }
 }
+@media (max-width: 767px) {
+  .requisites_title {
+    font-size: 40px;
+  }
+  .requisites_item_title, .requisites_item_subtitle, .requisites_item_text {
+    font-size: 14px !important;
+  }
+}
 .header_bottom_menu ul {
   list-style: none;
   padding: 0;
