--- a/static/css/_adaptive.scss
+++ b/static/css/_adaptive.scss
@@ -483,4 +483,34 @@
     } 
 }
 
+// -----------------Отделения-------------------
 
+@media(max-width: 767px) {
+    .title-depart h1 {
+        font-size: 40px;
+    }
+}
+@media(max-width: 480px) {
+    .title-depart h1 {
+        font-size: 28px;
+    }
+    .title-stacionar h2 {
+        font-size: 23px;
+    }
+    .title-otherdepart h2 {
+        font-size: 23px;
+    }
+}
+
+
+// -------Общая информация о стационаре----------
+
+@media(max-width: 767px) {
+
+.cards {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+}
