--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3186,6 +3186,28 @@ body {
             align-items: center;
   }
 }
+@media (max-width: 767px) {
+  .appointment_title {
+    font-size: 40px;
+  }
+  .important2_body {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .important2_title, .appointment_subtitle2 {
+    font-size: 24px;
+  }
+}
+@media (max-width: 450px) {
+  .important2_img img {
+    width: 100%;
+  }
+}
 .header_bottom_menu ul {
   list-style: none;
   padding: 0;
