--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -416,6 +416,15 @@ body {
             }
         }
     }
+    .departmens_bottom {
+        display: none;
+    }
+    .hospital_left_mobil {
+        display: none;
+    }
+    .other_right_mobil {
+        display: none;
+    }
 }
 
 .important_information_container {
@@ -502,6 +511,7 @@ body {
         margin-bottom: 32px;
         display: flex;
         justify-content: center;
+        
         .news_buttom-link {
             background: linear-gradient(45deg, $red 0%, $pink 100%);
             border-radius: 50px;
@@ -638,6 +648,11 @@ body {
     }
 
     // ---------Contact form home page------------
+    .cf_wrapper_mobil {
+        .contacts_form {
+        display: none !important;
+    }
+    }
     .contacts_form {
         background: $background_cf;
         border-radius: 20px;
