--- a/static/css/style.css
+++ b/static/css/style.css
@@ -899,9 +899,6 @@ body {
   color: #055D65;
   font-size: 30px;
 }
-.contacts_body .cf_wrapper_mobil .contacts_form {
-  display: none !important;
-}
 .contacts_body .contacts_form {
   background: #FAF2F9;
   border-radius: 20px;
@@ -1002,6 +999,117 @@ body {
   border-color: transparent;
 }
 .contacts_body .cf7_title {
+  font-family: "OpenSans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  color: #E80B8B;
+  margin-bottom: 22px;
+}
+
+.contacts_container .cf_wrapper_mobil {
+  display: none;
+  margin-left: -10px;
+  margin-right: -10px;
+}
+.contacts_container .contacts_form {
+  background: #FAF2F9;
+  height: 422px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 10px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+.contacts_container .contacts_form .contact_form_title {
+  color: #E80B8B;
+  font-family: "Open Sans";
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 33px;
+  margin-top: 5px;
+  margin-bottom: 22px;
+}
+.contacts_container .contacts_form .pers_data {
+  font-size: 12px;
+  color: #013236;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.contacts_container .contacts_form .pers_data a {
+  color: #013236;
+  text-decoration: underline;
+}
+.contacts_container input[name=privacy] {
+  width: 22px;
+  height: 22px;
+}
+.contacts_container .consent {
+  padding-left: 7px;
+}
+.contacts_container .consent p {
+  padding-top: 5px;
+}
+.contacts_container .wpcf7 {
+  margin-top: 10px;
+  margin-bottom: 39px;
+}
+.contacts_container .wpcf7 .wpcf7-form .text_cf7_bottom {
+  font-family: "OpenSans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 16px;
+  color: #1C3A2C;
+}
+.contacts_container .wpcf7 .wpcf7-form .text_cf7_bottom a {
+  color: #1C3A2C;
+  text-decoration: underline;
+}
+.contacts_container .wpcf7 .wpcf7-form .wpcf7-submit {
+  margin-top: 36px;
+  font-family: "OpenSans";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  text-align: center;
+  background: linear-gradient(40.37deg, #E80B8B 0%, #FF8ED0 100%);
+  border-radius: 50px;
+  width: 100%;
+  height: 50px;
+  color: #ffffff;
+  border-color: transparent;
+}
+.contacts_container .wpcf7 .wpcf7-form .wpcf7-form-control-wrap .wpcf7-list-item {
+  margin: 0;
+}
+.contacts_container .wpcf7 .wpcf7-form .wpcf7-form-control-wrap .wpcf7-list-item input {
+  -webkit-box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 2px;
+}
+.contacts_container .wpcf7 .wpcf7-form .wpcf7-form-control-wrap .wpcf7-text {
+  -webkit-box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 5px;
+  margin-bottom: 16px;
+  font-family: "OpenSans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 20px;
+  color: #898989;
+  padding: 12px 0 13px 14px;
+  width: 100%;
+  border-color: transparent;
+}
+.contacts_container .cf7_title {
   font-family: "OpenSans";
   font-style: normal;
   font-weight: 700;
