--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1312,6 +1312,12 @@ body {
 .about_container .addstyle {
   display: block;
 }
+.about_container .about_image_block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 10px;
+}
 .about_container .about_slider_top {
   margin-top: 32px;
   /* Слайдер */
