--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -1105,6 +1105,15 @@ body {
         display: flex;
         gap: 10px;
         // flex-wrap: wrap;
+        margin-bottom: 32px;
+        .about_image_item {
+            max-width: 289px;
+            max-height: 432px;
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
     }
     
     
@@ -1222,7 +1231,7 @@ body {
         display: flex;
         gap: 10px;
         margin-bottom: 32px;
-        flex-wrap: wrap;
+        
         .block_item {
             width: 23%;
             min-width: 150px;
