--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -808,7 +808,10 @@ body {
     .wpcf7 {
         margin-top: 10px;
         margin-bottom: 39px;
+        
         .wpcf7-form {
+            margin-left: 10px;
+            margin-right: 10px;
             .text_cf7_bottom {
                 font-family: $font_opensans;
                 font-style: normal;
